[news] fix overflow

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1371,7 +1371,6 @@ h1:before {
     }
 
     .modal {
-        overflow: hidden;
         .modal-header {
             padding-top: 14px;
         }
